--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="keywords" content="design, UNC, maymester">
     <!-- stylesheet -->
 </head>
-<body>
-
+<body style="background-color:aliceblue;">
+    <h1>Janae Goodison</h1>
     <p>
         This is a block of text: Deserunt anim anim tempor adipisicing veniam consequat minim. Cillum consequat nostrud id adipisicing. Minim sit magna quis aliqua deserunt ipsum ut aute mollit dolore. Exercitation voluptate dolor sunt aliqua. Nisi amet pariatur aute elit enim Lorem consequat ipsum. Veniam cupidatat quis id culpa. Incididunt et deserunt ea velit sit.
     </p>
@@ -14,6 +14,24 @@
     <p>
         This is a second paragrah: Nostrud incididunt fugiat esse ex ad exercitation eiusmod incididunt mollit labore sunt. Non veniam anim sint in elit officia deserunt commodo excepteur labore. Aliquip adipisicing deserunt reprehenderit reprehenderit exercitation et sit fugiat. In deserunt laborum mollit labore cupidatat aliquip consequat in enim duis nulla cillum labore. Aute duis mollit ullamco minim velit aute quis consequat aliquip pariatur id do. Ad dolore in do labore reprehenderit dolore culpa elit in. Dolore proident cillum dolor sunt duis.
     </p>
+    <ul>
+        <li>Element 1</li>
+        <li>Element 2</li>
+        <li>Element 3</li>
+    </ul>
+    <ol>
+        <li>element 1</li>
+        <li>element 2</li>
+    </ol>
+
+    <img src="graphics/catDrawing.jpg"><br>
+    
+    <a href ="secondpage.html">Second Page</a><br>
+
+    
+
+    <a href = "goodgle.com" target="blank">Other website</a>
+
 </body>
 
 </html>
