--- a/index.html
+++ b/index.html
@@ -1,5 +1,75 @@
 <!DOCTYPE HTML>
 <html>
+<head>
+    <title>Janae Goodison 6-B WebPage</title>
+    <meta name="keywords" content="design, UNC, maymester">
+    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Aoboshi+One&display=swap" rel="stylesheet"> 
+
+</head>    
+<body>
+    <header>
+        <h1 id="logo">The Effects of...</h1> 
+        <h5>by: Janae Goodison</h5>
+        <h3>Social Media</h3>
+    <img src="graphics/socialMediaCluster.jpg" alt="picture of blondies">
+    <div id="neg">
+        <h4>Negative Effects</h4>
+        <ul>
+            <li>
+               Social Media can be <a href="https://www.jeffersonhealth.org/your-health/living-well/the-addictiveness-of-social-media-how-teens-get-hooked" target="_blank">addicting</a>.
+            </li>
+            <li>
+               Social Media can affect your 
+               <a href="https://mitsloan.mit.edu/ideas-made-to-matter/study-social-media-use-linked-to-decline-mental-health" target="_blank">mental health</a>. Comparison is a confidence killer
+                and very easy to do on a platform where everyone constantly shows the best version of themselves.
+            </li>
+            <li>
+                Social Media (in addtion to other technologies) can strip you of your 
+                <a href="https://epic.org/issues/consumer-privacy/social-media-privacy/" target="_blank">privacy</a>.
+             </li>
+             <li>
+                Social Media can disrupt your 
+                <a href="https://aasm.org/are-you-tiktok-tired-93-of-gen-z-admit-to-staying-up-past-their-bedtime-due-to-social-media/" target="_blank">sleep patterns</a>.
+             </li>
+        </ul>
+    </div>
+    <div id="pos">
+        <h4>Positive Effects</h4>
+        <ul>
+            <li>
+                Social Media allows you to connect with people<a href="https://www.youtube.com/watch?v=mNUezt0kw-I&ab_channel=416ATHEIST%5BBEASTMODE%5D" target="_blank"> all around the world</a> no matter the distance. 
+             </li>
+             <li>
+                Social Media gives you a platform for 
+                <a href="https://scholarworks.gvsu.edu/cgi/viewcontent.cgi?article=1839&context=honorsprojects" target="_blank">activism</a>
+                 allowing you to bring 
+                <a href="https://www.tiktok.com/@askdrmom/video/7093868800155585838?_r=1&_t=8c9QqoQnp2B&social_sharing=v2" target="_blank">awareness</a> 
+                to a topic you're passionate about.
+             </li>
+             <li>
+                 Social Media is a home for sharing personal 
+                 <a href="https://www.instagram.com/reel/CmDJHnhJvRw/?igshid=NzJjY2FjNWJiZg==" target="_blank">creativity</a>.
+              </li>
+              <li>
+                 Social Media can be 
+                 <a href="https://www.youtube.com/@crashcourse" target="_blank">educational</a>.
+              </li>
+              <li>
+                 Social Media can bring you
+                 <a href="https://www.tiktok.com/t/ZTRoNY6fA/" target="_blank">joy and laughter</a>.
+              </li>
+        </ul>
+    </div>
+
+    
+</body>
+</html>
+
+<!-- <!DOCTYPE HTML>
+<html>
 <head> 
     <title>May 25, 2023</title>
     <meta name="keywords" content="design, UNC, maymester">
@@ -9,7 +79,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap" rel="stylesheet">
     
 </head>
-<!-- <body style="background-color:aliceblue;"> -->
+
 <body>
     <h1>Janae Goodison</h1>
     <p>
@@ -42,4 +112,4 @@
 
 </body>
 
-</html>
+</html> -->
