--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </p>
 
     <p>Project 7-B: 
-        <a href="htmllink">Twine Project</a>
+        <a href="https://jgoodison.github.io/goodisonFinalTwine.html">Twine Project</a>
     </p>
 </body>
 </html>
